# px4_ai_classifier

./: .gitignore  Colab_GitHub_UV.ipynb  Colab_Training.ipynb  PROJECT_JOURNAL.md  README.md  app.py  app_first_working.py  evaluate_all.py  pyproject.toml
data/: feature_scaler.pkl
data/EDA/: EDA_PX4_Classifier (1).ipynb  text_eda.py
data/data_bulding/: analyze_sensors.py  build_clean_dataset.py  build_master_dataset.py  diagnostic_labels.py
data/preprossing/: preprocess_and_split.py  preprocessing_step1_corr.py
src/: colab_setup.py  config.py  dataset.py  main.py  train.py  train_modal.py
src/models/: architectures.py
tests/: test_architectures.py  test_colab_upload.py  test_pipeline.py
training_results/: best_cnn.pt  best_lstm.pt  final_best_model.pt
